Readability of the Flow Text for mobile fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -164,4 +164,8 @@ form p {
   h5 {
     font-size: 1.2em;
   }
+
+  .flow-text {
+    font-size: 0.75em;
+  }
 }
